--- a/README
+++ b/README
@@ -1,14 +1,16 @@
 
 This tool serves two purposes:
 
-Direct testing:
-
-Write tests for the output of running command line programs, and for
-the output of interactive sessions with repl style or similar command
-line programms.
-
 Document based testing:
 
 Test transcripts of running command line programs, including
 interactive ones, in documentation - so you can check your
 documentation is correct.
+
+Direct testing:
+
+Write tests for the output of running command line programs, and for
+the output of interactive sessions with repl style or similar command
+line programs. Not sure if it's the best tool for this, but it does
+allow you to write documentation with your tests.
+
